--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <java.version>11</java.version>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.source>${java.version}</maven.compiler.source>
+        <lombok.version>1.18.26</lombok.version>
         <springdoc-openapi-webflux-ui.version>1.4.3</springdoc-openapi-webflux-ui.version>
         <commons-lang3.version>3.10</commons-lang3.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
@@ -50,6 +51,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
             <optional>true</optional>
         </dependency>
 
